==================================================================
User visible changes for UPX
==================================================================

Changes in 3.05 (01 XXX 2009):
  * new format Dylib/i386 supports shared libraries on Darwin (Mach-o);
    an existing -init function (LC_ROUTINES command) is required.

Changes in 3.04 (27 Apr 2009):
  * new format vmlinuz/armel for Debian NSLU2 (etc.) linux kernel
  * bvmlinuz boot protocol 2.08 for 386 Linux kernel
  * Extended ABI version 4 for armel-eabi ARM Linux ELF
  * bug fixes

Changes in 3.03 (27 Apr 2008):
  * implement cache flushing for PowerPC (esp. model 440)
  * fix cache flushing on MIPS (>3 MiB compressed, or with holes)
  * fix MIPS big-endian
  * bug fixes

Changes in 3.02 (16 Dec 2007):
  * fix unmapping on arm-linux.elf
  * fix error checking in mmap for i386-linux.elf [triggered by -fPIE]
  * bug fixes

Changes in 3.01 (31 Jul 2007):
  * new options --no-mode, --no-owner and --no-time to disable preservation
    of mode (file permissions), file ownership and timestamps.
  * dos/exe: fixed an incorrect error message caused by a bug in
    relocation handling
  * new format linux/mipsel supports ELF on [32-bit] R3000
  * fix argv[0] on PowerPC with --lzma
  * bug fixes

Changes in 3.00 (27 Apr 2007):
  * watcom/le & tmt/adam: fixed a problem when using certain filters

Changes in 2.93 beta (08 Mar 2007):
  * new formats Mach/i386 and Mach/fat support Mac OS X i686 and
    Universal binaries [i686 and PowerPC only]
  * dos/exe: LZMA is now also supported for 16-bit dos/exe. Please note that
    you have to explicitly use '--lzma' even for '--ultra-brute' here
    because runtime decompression is about 30 times slower than NRV -
    which is really noticeable on old machines.
  * dos/exe: fixed a rarely occuring bug in relocation handling
  * win32/pe & arm/pe: better icon compression handling

Changes in 2.92 beta (23 Jan 2007):