@@ -14,7 +14,7 @@ Idx Name          Size      VMA       LMA       File off  Algn  Flags
   9 NRV_TAIL      0000001c  00000000  00000000  00001784  2**0  CONTENTS, READONLY
  10 CFLUSH        00000024  00000000  00000000  000017a0  2**0  CONTENTS, READONLY
  11 ELFMAINY      00000000  00000000  00000000  000017c4  2**0  CONTENTS, READONLY
- 12 ELFMAINZ      0000019c  00000000  00000000  000017c4  2**0  CONTENTS, READONLY
+ 12 ELFMAINZ      00000204  00000000  00000000  000017c4  2**0  CONTENTS, READONLY
 SYMBOL TABLE:
 00000000 l    d  LZMA_DEC30	00000000 LZMA_DEC30
 00000000 l    d  NRV_TAIL	00000000 NRV_TAIL
@@ -33,7 +33,7 @@ SYMBOL TABLE:
 
 RELOCATION RECORDS FOR [MACOS000]:
 OFFSET   TYPE              VALUE
-00000004 R_PPC_REL24       ELFMAINZ+0x00000198
+00000004 R_PPC_REL24       ELFMAINZ+0x00000200
 
 RELOCATION RECORDS FOR [NRV2E]:
 OFFSET   TYPE              VALUE
